--- a/server/Makefile
+++ b/server/Makefile
@@ -3,6 +3,8 @@ SRC	=			server.c	\
 				parse_request.c	\
 				parse_arg.c	\
 				http_headers.c	\
+				status_log.c	\
+
 
 CFLAGS	=	-g3 -g -Wall -Wextra
 
